--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --host --port ${PORT-3000"
+    "preview": "vite preview --host --port ${PORT-3000}"
   },
   "dependencies": {
     "vue": "^3.2.25",
