--- a/backend/package.json
+++ b/backend/package.json
@@ -59,8 +59,9 @@
     "sequelize": "^6.15.0",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.5.5",
+    "yarn": "^1.22.18"
   },
   "repository": {
     "type": "git",
