--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Client Build and push
         uses: docker/build-push-action@v2
         with:
-            context: ./client
-            file: ./client/Dockerfile
+            context: ./frontend
+            file: ./frontend/Dockerfile
             builder: ${{ steps.buildx.outputs.name }}
             push: true
             tags: ${{ secrets.DOCKER_HUB_USERNAME }}/client:latest
@@ -62,8 +62,8 @@ jobs:
       - name: server Build and push
         uses: docker/build-push-action@v2
         with:
-            context: ./server
-            file: ./server/Dockerfile
+            context: ./backend
+            file: ./backend/Dockerfile
             builder: ${{ steps.buildx.outputs.name }}
             push: true
             tags: ${{ secrets.DOCKER_HUB_USERNAME }}/server:latest
